Try out LTS JDK 17 and migrate to Elasticsearch v7.14.1